[package]
name = "picky"
version = "0.0.0"
authors = ["Benoît CORTIER <bcortier@proton.me>"]
edition = "2021"
publish = false
description = "Portable X.509, PKI, JOSE and HTTP signature implementation."
keywords = ["x509", "jwt", "signature", "jose", "pki"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Devolutions/picky-rs"

[workspace]
members = ["."]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "fat"
opt-level = "s"
strip = "debuginfo"

[features]
default = ["console_error_panic_hook"]

[dependencies]
picky = { path = "../../picky/", default-features = false, features = ["jose", "ssh", "putty"] }

wasm-bindgen = "0.2.81"
serde_json = "1.0.82"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

getrandom = { version = "0.2.7", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.31"
